--- a/src/Blog/templates/Post/PostTemplate.scss
+++ b/src/Blog/templates/Post/PostTemplate.scss
@@ -2,4 +2,16 @@
 
 .blog-post {
   @include base-page;
+
+  .post-item {
+    @include rhythm-v;
+    @include spacing-h;
+    @include spacing-v;
+    background: linear-gradient(
+      to bottom,
+      rgba(255, 255, 255, 1) 0%,
+      rgba(255, 255, 255, 0.2) 80%,
+      rgba(255, 255, 255, 1) 100%
+    );
+  }
 }
