--- a/src/Shared/blocks/BaseListItem/BaseListItem.mixin.scss
+++ b/src/Shared/blocks/BaseListItem/BaseListItem.mixin.scss
@@ -2,7 +2,7 @@
 @import '../../styles/mixins/layout';
 @import '../../styles/mixins/type';
 
-@mixin base-list-item-all {
+@mixin base-list-item-block {
   .node-contents {
     display: block;
   }
@@ -12,36 +12,12 @@
       text-decoration: none;
     }
   }
-
-  margin-bottom: gap('huge');
-}
-
-@mixin base-list-item-spacing {
-  margin-left: gap('base', -1);
-  margin-right: gap('base', -1);
-  padding: gap('base');
-
-  @include breakpoint-small {
-    margin-left: gap('medium', -1);
-    margin-right: gap('medium', -1);
-    padding: gap('base', 1.5) gap('medium');
-  }
-
-  @include breakpoint-compact {
-    margin-left: 0;
-    margin-right: 0;
-    padding: gap('large');
-  }
 }
 
 @mixin base-list-item-style {
-  @include base-list-item-all;
-  @include base-list-item-spacing;
-  background: color('bright');
-
   .node-date {
     @include type-small;
-    display: block;
+    display: inline-block;
   }
 
   .node-title {
@@ -51,5 +27,20 @@
 
   .read-more {
     margin-bottom: gap('small');
+  }
+}
+
+@mixin base-list-item {
+  @include base-list-item-block;
+  @include rhythm-v;
+
+  .node-contents {
+    @include spacing-h;
+    @include spacing-v;
+    @include rhythm-v-compact;
+  }
+
+  .node-footer {
+    @include spacing-h;
   }
 }
