--- a/src/Shared/styles/settings/_color.scss
+++ b/src/Shared/styles/settings/_color.scss
@@ -8,6 +8,26 @@ $color-primitives: (
   feature-bg: hsl(205, 22%, 83%),
   feature-alt: hsl(205, 22%, 59%),
   bright: hsl(205, 18%, 97%),
+  variants-0-bright: hsl(205, 2%, 90%),
+  variants-1-bright: hsl(10, 22%, 90%),
+  variants-2-bright: hsl(40, 22%, 90%),
+  variants-3-bright: hsl(80, 22%, 90%),
+  variants-4-bright: hsl(120, 22%, 90%),
+  variants-5-bright: hsl(170, 22%, 90%),
+  variants-6-bright: hsl(205, 22%, 90%),
+  variants-7-bright: hsl(245, 22%, 90%),
+  variants-8-bright: hsl(280, 22%, 90%),
+  variants-9-bright: hsl(310, 22%, 90%),
+  variants-0-dark: hsl(205, 2%, 20%),
+  variants-1-dark: hsl(10, 60%, 20%),
+  variants-2-dark: hsl(40, 60%, 20%),
+  variants-3-dark: hsl(80, 60%, 20%),
+  variants-4-dark: hsl(130, 60%, 20%),
+  variants-5-dark: hsl(170, 60%, 20%),
+  variants-6-dark: hsl(205, 60%, 20%),
+  variants-7-dark: hsl(245, 60%, 20%),
+  variants-8-dark: hsl(280, 60%, 20%),
+  variants-9-dark: hsl(310, 60%, 20%),
   dark: hsl(205, 14%, 16%),
   selected: hsl(95, 100%, 42%),
   interactive: hsl(205, 45%, 34%),
@@ -45,5 +65,29 @@ $color-groups: (
     a: map-get($c, 'interactive-bright'),
     active: map-get($c, 'interactive-on'),
     alt: map-get($c, 'bright')
+  ),
+  bright: (
+    0: map-get($c, 'variants-0-bright'),
+    1: map-get($c, 'variants-1-bright'),
+    2: map-get($c, 'variants-2-bright'),
+    3: map-get($c, 'variants-3-bright'),
+    4: map-get($c, 'variants-4-bright'),
+    5: map-get($c, 'variants-5-bright'),
+    6: map-get($c, 'variants-6-bright'),
+    7: map-get($c, 'variants-7-bright'),
+    8: map-get($c, 'variants-8-bright'),
+    9: map-get($c, 'variants-9-bright')
+  ),
+  dark: (
+    0: map-get($c, 'variants-0-dark'),
+    1: map-get($c, 'variants-1-dark'),
+    2: map-get($c, 'variants-2-dark'),
+    3: map-get($c, 'variants-3-dark'),
+    4: map-get($c, 'variants-4-dark'),
+    5: map-get($c, 'variants-5-dark'),
+    6: map-get($c, 'variants-6-dark'),
+    7: map-get($c, 'variants-7-dark'),
+    8: map-get($c, 'variants-8-dark'),
+    9: map-get($c, 'variants-9-dark')
   )
 );
