--- a/src/Feed/blocks/NodeListItem/NodeListItem.scss
+++ b/src/Feed/blocks/NodeListItem/NodeListItem.scss
@@ -1,5 +1,9 @@
 @import '../../../Shared/blocks/BaseListItem/BaseListItem.mixin';
 
 .node-list-item {
-  @include base-list-item-style;
+  @include base-list-item;
+
+  .node-contents {
+    @include base-list-item-style;
+  }
 }
