--- a/src/Meta/blocks/MetaListItem/MetaListItem.scss
+++ b/src/Meta/blocks/MetaListItem/MetaListItem.scss
@@ -3,20 +3,28 @@
 @import '../../../Shared/blocks/BaseListItem/BaseListItem.mixin';
 
 .meta-list-item {
-  @include base-list-item-style;
-  background: linear-gradient(to bottom, rgba(255, 255, 255, 1) 0%, rgba(255, 255, 255, 0) 50%);
+  @include base-list-item;
+
+  .node-contents {
+    @include base-list-item-style;
+    background-color: color('bright', 0);
+    border-left-color: transparent;
+    border-right-color: transparent;
+  }
+
+  .last-updated {
+    @include type-small;
+    margin: 0;
+  }
 
   .node-title {
     margin-bottom: gap('medium');
   }
 
-  .node-footer {
-    padding-top: gap('small');
-    border-top: 1px solid color('base', 'edge');
-  }
-
   @include breakpoint-compact {
-    border-top-left-radius: gap('small');
-    border-top-right-radius: gap('small');
+    .node-contents {
+      border-left-color: color('base', 'edge');
+      border-right-color: color('base', 'edge');
+    }
   }
 }
