--- a/src/Taxonomy/groups/TagList/TagList.scss
+++ b/src/Taxonomy/groups/TagList/TagList.scss
@@ -1,5 +1,5 @@
-@import '../../../Shared/groups/NodeList/NodeList.mixin.scss';
+@import '../../../Shared/styles/mixins/reset';
 
 .tag-list {
-  @include node-list;
+  @include reset-list;
 }
