--- a/src/Shared/blocks/Hero/Hero.scss
+++ b/src/Shared/blocks/Hero/Hero.scss
@@ -12,10 +12,15 @@
     position: absolute;
     top: 0;
     left: 0;
-    min-width: 100%;
-    max-width: 100%;
-    min-height: 100%;
-    object-fit: cover;
+    width: 100%;
+    height: 100%;
+
+    img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      object-position: center;
+    }
   }
 
   .hero-content {
