--- a/src/Site/blocks/SiteFooter/SiteFooter.scss
+++ b/src/Site/blocks/SiteFooter/SiteFooter.scss
@@ -25,7 +25,7 @@
   .navigation {
     display: flex;
     margin-bottom: gap('large');
-    font-size: responsive-type-size('large');
+    font-size: responsive-type-size('base');
 
     nav {
       margin-right: gap('large');
