--- a/src/Shared/styles/settings/_color.scss
+++ b/src/Shared/styles/settings/_color.scss
@@ -29,6 +29,7 @@ $color-primitives: (
   variants-8-dark: hsl(280, 60%, 20%),
   variants-9-dark: hsl(310, 60%, 20%),
   dark: hsl(205, 14%, 16%),
+  muted: rgb(43, 58, 68),
   selected: hsl(95, 100%, 42%),
   interactive: hsl(205, 45%, 34%),
   interactive-bright: hsl(205, 57%, 74%),
@@ -43,7 +44,8 @@ $color-groups: (
     a: map-get($c, 'interactive'),
     active: map-get($c, 'interactive-on'),
     alt: map-get($c, 'primary-bright'),
-    edge: map-get($c, 'feature-alt')
+    edge: map-get($c, 'muted'),
+    muted: map-get($c, 'muted')
   ),
   feature: (
     bg: map-get($c, 'feature-bg'),
