--- a/src/Shared/styles/lib/util/_non-destructive-map-merge.scss
+++ b/src/Shared/styles/lib/util/_non-destructive-map-merge.scss
@@ -1,17 +1,19 @@
 @function non-destructive-map-merge($parent-map, $child-map) {
   $result: $parent-map;
+
   @each $key, $value in $child-map {
     @if (not map-has-key($result, $key)) or
       (type-of(map-get($result, $key)) != type-of($value)) or
-      (not (type-of(map-get($result, $key)) == map and type-of($value) == map))
-    {
+      (not (type-of(map-get($result, $key)) == map and type-of($value) == map)) {
       $result: map-merge(
         $result,
         (
           $key: $value
         )
       );
-    } @else {
+    }
+
+    @else {
       $result: map-merge(
         $result,
         (
@@ -20,5 +22,6 @@
       );
     }
   }
+
   @return $result;
 }
