--- a/src/Shared/styles/lib/vars/_vars-from-map.scss
+++ b/src/Shared/styles/lib/vars/_vars-from-map.scss
@@ -1,21 +1,26 @@
 @function vars-from-map($prefix, $vars) {
   $result: ();
+
   @each $key, $value in $vars {
     $prop: #{$prefix}-#{$key};
+
     @if (type-of($value) == map) {
       $result: map-merge($result, vars-from-map($prop, $value));
-    } @else {
+    }
+
+    @else {
       $result: map-merge(
         $result,
         (
           #{$key}:
-            (
-              prop: $prop,
-              value: $value
-            )
+          (
+            prop: $prop,
+            value: $value
+          )
         )
       );
     }
   }
+
   @return $result;
 }
