--- a/src/Blog/blocks/PostListItem/PostListItem.scss
+++ b/src/Blog/blocks/PostListItem/PostListItem.scss
@@ -1,5 +1,4 @@
 @import '../../../Shared/styles/mixins/layout';
-
 @import '../../../Shared/blocks/BaseListItem/BaseListItem.mixin';
 
 .post-list-item {
@@ -7,12 +6,14 @@
 
   .node-contents {
     @include base-list-item-style;
-    background: linear-gradient(
-      to bottom,
-      rgba(255, 255, 255, 1) 0%,
-      rgba(255, 255, 255, 0.2) 80%,
-      rgba(255, 255, 255, 1) 100%
-    );
+
+    background:
+      linear-gradient(
+        to bottom,
+        rgba(255, 255, 255, 1) 0%,
+        rgba(255, 255, 255, 0.2) 80%,
+        rgba(255, 255, 255, 1) 100%
+      );
   }
 
   @include breakpoint-compact {
