--- a/src/Shared/elements/AnchoredHeading/AnchoredHeading.scss
+++ b/src/Shared/elements/AnchoredHeading/AnchoredHeading.scss
@@ -11,7 +11,7 @@
     left: gap('medium', -1);
     outline: none;
     border: none;
-    width: 0px;
+    width: 0;
     opacity: 0;
     transition: opacity 0.2s ease-in-out;
 
