--- a/src/Shared/styles/mixins/_input.scss
+++ b/src/Shared/styles/mixins/_input.scss
@@ -16,19 +16,21 @@
     padding-left: $margin-regular - $margin-tiny;
   }
 
-  .label:before {
+  .label::before {
     @include absolute();
     @include pseudo();
+
     width: $size;
     height: $size;
     border-radius: 3px;
-    border: 1px solid #dddddd;
+    border: 1px solid color('base', 'edge');
     background: $bg-bright;
   }
 
-  input:checked + .label:after {
+  input:checked + .label::after {
     @include absolute(4px, 4px);
     @include pseudo();
+
     width: 0;
     height: 0;
     border: 4px solid $bg-selected;
