--- a/src/Shared/styles/settings/_type.scss
+++ b/src/Shared/styles/settings/_type.scss
@@ -13,7 +13,7 @@ $type-sizes: (
   h2: 2.8rem,
   h3: 2.4rem,
   h4: 2rem,
-  large: 1.8rem,
+  medium: 1.8rem,
   base: 1.6rem,
   small: 1.3rem
 );
@@ -24,7 +24,7 @@ $type-scalars: (
   h2: 0.25,
   h3: 0.25,
   h4: 0.25,
-  large: 0.25,
+  medium: 0.25,
   base: 0.25,
   small: 0.125
 );
