assets: refactor markdown, kill variants; responsive print

--- a/src/Shared/elements/MarkdownBase/MarkdownBase.scss
+++ b/src/Shared/elements/MarkdownBase/MarkdownBase.scss
@@ -1,6 +1,6 @@
 @import '../Markdown/Markdown.mixins';
 
-.markdown-basic {
+@mixin markdown-base {
   @include markdown;
 
   & > :first-child {
@@ -10,4 +10,8 @@
   & > :last-child {
     margin-bottom: 0;
   }
+}
+
+.markdown-base {
+  @include markdown-base;
 }
