list media; improve asset libs

--- a/src/Media/templates/Index/IndexTemplate.scss
+++ b/src/Media/templates/Index/IndexTemplate.scss
@@ -1,6 +1,12 @@
+@import '../../../Shared/styles/mixins/reset';
 @import '../../../Shared/styles/mixins/layout';
+
 @import '../../../Shared/templates/BasePage.mixin';
 
 .media-index {
   @include base-page;
+
+  .media-list {
+    @include reset-list;
+  }
 }
