--- a/src/Shared/styles/settings/_color.scss
+++ b/src/Shared/styles/settings/_color.scss
@@ -8,6 +8,7 @@ $color-primitives: (
   feature-bg: hsl(205, 22%, 83%),
   feature-alt: hsl(205, 22%, 59%),
   bright: hsl(205, 18%, 97%),
+  dim: hsl(205, 18%, 77%),
   variants-0-bright: hsl(205, 2%, 90%),
   variants-1-bright: hsl(10, 22%, 90%),
   variants-2-bright: hsl(40, 22%, 90%),
@@ -29,7 +30,7 @@ $color-primitives: (
   variants-8-dark: hsl(280, 60%, 20%),
   variants-9-dark: hsl(310, 60%, 20%),
   dark: hsl(205, 14%, 16%),
-  muted: rgb(43, 58, 68),
+  muted: hsl(205, 22%, 32%),
   selected: hsl(95, 100%, 42%),
   interactive: hsl(205, 45%, 34%),
   interactive-bright: hsl(205, 57%, 74%),
@@ -45,6 +46,7 @@ $color-groups: (
     active: map-get($c, 'interactive-on'),
     alt: map-get($c, 'primary-bright'),
     edge: map-get($c, 'muted'),
+    dim: map-get($c, 'dim'),
     muted: map-get($c, 'muted')
   ),
   feature: (
