fix markdown is rendering an extra div (definitely messing with first/last-child margin resets)

--- a/src/Shared/elements/Markdown/Markdown.mixins.scss
+++ b/src/Shared/elements/Markdown/Markdown.mixins.scss
@@ -8,3 +8,15 @@
     list-style-type: none;
   }
 }
+
+@mixin markdown-base {
+  @include markdown;
+
+  & > :first-child {
+    margin-top: 0;
+  }
+
+  & > :last-child {
+    margin-bottom: 0;
+  }
+}
