--- a/src/Shared/elements/NodeMarkdown/NodeMarkdown.scss
+++ b/src/Shared/elements/NodeMarkdown/NodeMarkdown.scss
@@ -1,11 +1,6 @@
-@import '../../../Shared/elements/Markdown/Markdown.mixins';
-@import '../../../Shared/elements/MarkdownBase/MarkdownBase';
-
-@mixin node-markdown {
-  @include markdown;
-  @include markdown-base;
-}
+@import '../Markdown/Markdown.mixins';
 
 .node-markdown {
-  @include node-markdown;
+  @include markdown;
+  @include markdown-base;
 }
