--- a/src/Blog/templates/Post/PostTemplate.scss
+++ b/src/Blog/templates/Post/PostTemplate.scss
@@ -32,7 +32,7 @@
     border-bottom: 1px solid color('base', 'dim');
 
     p {
-      margin: gap('medium') 0;
+      margin: gap('base') 0;
     }
   }
 
