--- a/src/Media/blocks/ImageListItem/ImageListItem.scss
+++ b/src/Media/blocks/ImageListItem/ImageListItem.scss
@@ -37,8 +37,7 @@
     display: block;
 
     @include breakpoint-compact {
-      padding-left: gap('large');
-      padding-right: gap('large');
+      padding: 0 gap('large') gap('large');
     }
   }
 
