--- a/src/Shared/styles/_index.scss
+++ b/src/Shared/styles/_index.scss
@@ -2,3 +2,5 @@
 @import './base/scheme';
 @import './base/typography';
 @import './base/layout';
+
+@import '../elements/StagingBanner/StagingBanner.scss';
